сваггер на юзеров
